SOURCES += %D%/../wayland.scm \
 %D%/argument.scm        \
 %D%/callback.scm        \
 %D%/client.scm          \
 %D%/client-core.scm     \
 %D%/compositor.scm      \
 %D%/config.scm          \
 %D%/cursor.scm          \
 %D%/display.scm         \
 %D%/egl.scm             \
 %D%/event-loop.scm      \
 %D%/global.scm          \
 %D%/interface.scm       \
 %D%/keyboard.scm        \
 %D%/list.scm            \
 %D%/listener.scm        \
 %D%/output.scm          \
 %D%/pointer.scm         \
 %D%/proxy.scm           \
 %D%/registry.scm        \
 %D%/resource.scm        \
 %D%/server-core.scm     \
 %D%/shm.scm             \
 %D%/signal.scm          \
 %D%/touch.scm           \
 %D%/util.scm
