SOURCES += %D%/backend.scm  \
%D%/render/allocator.scm    \
%D%/render/renderer.scm     \
%D%/types.scm               \
%D%/types/output.scm        \
%D%/types/output-layout.scm \
%D%/types/layer-shell.scm   \
%D%/types/input-device.scm  \
%D%/types/seat.scm          \
%D%/types/data-device.scm   \
%D%/types/compositor.scm    \
%D%/types/xdg-shell.scm     \
%D%/types/pointer.scm       \
%D%/types/cursor.scm        \
%D%/types/xcursor.scm       \
%D%/types/scene.scm         \
%D%/types/surface.scm       \
%D%/util/box.scm            \
%D%/util/log.scm            \
%D%/util/addon.scm          \
%D%/utils.scm
